--- a/index.html
+++ b/index.html
@@ -6,22 +6,58 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <script src="https://kit.fontawesome.com/858af4e785.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1></h1>
-  Build The Community Your Fans Will Love
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
 
-  Register
+  <div class="logo">
+  <img src="images/logo.svg" alt="">
+</div>
 
-  <footer>
+
+
+<div class="card">
+
+
+  
+  <div class="card-img">
+    <img src="images/illustration-mockups.svg" alt="">
+  </div>
+  
+
+
+  <div class="card-info">
+    <h1> Build The Community Your Fans Will Love</h1>
+   
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+    Create connections with your users as you engage in genuine discussion. </p>
+    <div class="btn">
+      <a href="">Register</a>
+    </div>
+     
+  </div>
+
+</div>
+
+<div class="socials">
+  <i class="fab fa-facebook"></i>
+  <i class="fab fa-twitter"></i>
+  <i class="fab fa-instagram"></i>
+</div>
+
+
+<!--
+   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+-->
+ 
 </body>
 </html>
