--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-  <script src="https://kit.fontawesome.com/858af4e785.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/styles.css">
@@ -38,16 +38,22 @@
     <div class="btn">
       <a href="">Register</a>
     </div>
+
+    <div class="socials">
+      <i class="fab fa-facebook-f fa-2x"></i>
+      <i class="fab fa-twitter fa-2x"></i>
+      <i class="fab fa-instagram fa-2x"></i>
+    </div>
+  
      
   </div>
 
+  
 </div>
 
-<div class="socials">
-  <i class="fab fa-facebook"></i>
-  <i class="fab fa-twitter"></i>
-  <i class="fab fa-instagram"></i>
-</div>
+
+
+
 
 
 <!--
